# matrix-bridge-wechat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-run.sh  example-config.yaml
.github/: CODEOWNERS
.github/workflows/: crates-release.yml  docker.yml  release.yml  tests.yml
migrations/: 001_initial.sql
src/: error.rs  lib.rs  main.rs  metrics.rs
src/bridge/: command.rs  mod.rs  portal.rs  puppet.rs  user.rs  wechat_bridge.rs
src/config/: bridge.rs  mod.rs
src/crypto/: machine.rs  mod.rs  store.rs  types.rs
src/database/: message.rs  mod.rs  portal.rs  puppet.rs  schema.rs  user.rs
src/formatter/: emoji.rs  matrix_to_wechat.rs  mod.rs  wechat_to_matrix.rs
src/matrix/: appservice.rs  client.rs  event_handler.rs  mod.rs  types.rs
src/util/: contact.rs  mod.rs  uid.rs
src/util/perf/: cache.rs  mod.rs  queue.rs  semaphore.rs
src/util/retry/: backoff.rs  handler.rs  mod.rs  reconnection.rs
src/web/: health.rs  mod.rs  provisioning.rs  thirdparty.rs
src/wechat/: client.rs  mod.rs  protocol.rs  service.rs  types.rs
tests/: integration_tests.rs
tests/common/: mod.rs
