[package]
name = "matrix-bridge-wechat"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["chris <chris@acroidea.com>"]
description = "A Matrix-WeChat puppeting bridge"
license = "AGPL-3.0-or-later"
repository = "https://github.com/palpo-im/matrix-bridge-wechat"

[dependencies]
tokio = { version = "1", features = ["full"] }
salvo = { version = "0.89", features = ["websocket", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
diesel = { version = "2.1", features = ["sqlite", "postgres", "r2d2", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
futures-util = "0.3"
tokio-stream = "0.1"
thiserror = "2"
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2.1"
async-trait = "0.1"
base64 = "0.22"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
opt-level = 3

[[bin]]
name = "matrix-bridge-wechat"
path = "src/main.rs"
